# mcstas_openPMD_component

./: .clang-format  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CppWrap.comp  LICENSE  README.md  Test_CppWrap.instr  build.sh  cmake_api.patch  component.cc  component.hh  hellowrap.cpp  hellowrap.h  particle.cc  particle.hh
include/: openpmd_output_formats.h  wrap.h
mcstas_component/: CppWrap.comp  Test_CppWrap.instr  Test_read_openPMD.instr  Test_write_openPMD.instr  read_openPMD.comp  write_openPMD.comp
src/: component.cc  component.hh  openPMD_io.cc  openPMD_io.hh  particle.cc  particle.hh  particles.cc  particles.hh  wrap.cc
